--- a/index.html
+++ b/index.html
@@ -5,59 +5,54 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NeuroSprint</title>
 <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#4CAF50">
+<meta name="theme-color" content="#2E7D32">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="app">
+<div id="menu" class="menu">
+    <h1>NeuroSprint</h1>
+    <p class="subtitle">Tryck på sidan som matchar symbolen</p>
 
-<h1>🧠 NeuroSprint</h1>
-<p class="subtitle">Tryck på sidan som matchar symbolen</p>
-
-<div id="menu">
     <div class="rules">
-        🟢 = VÄNSTER<br>
-        🔵 = HÖGER
+        <div><span class="shape circle"></span> = Vänster</div>
+        <div><span class="shape square"></span> = Höger</div>
     </div>
 
     <label class="toggle">
         <input type="checkbox" id="gentleToggle">
-        🌿 Gentle Mode (ingen minuspoäng)
+        Gentle Mode (ingen minuspoäng, lugnare tempo)
     </label>
 
     <button id="startBtn" class="primary">Starta</button>
 </div>
 
 <div id="game" class="hidden">
+
     <div class="topbar">
         <div id="timer">Tid: 60</div>
         <div id="score">Poäng: 0</div>
     </div>
 
-    <div id="combo" class="combo hidden">🔥 5 i rad!</div>
+    <div class="playArea">
+        <div id="leftZone" class="zone left"></div>
+        <div id="rightZone" class="zone right"></div>
 
-    <div id="stimulus" class="bigIcon">🟢</div>
-
-    <div class="buttons">
-        <button id="leftBtn" class="action">⬅</button>
-        <button id="rightBtn" class="action">➡</button>
+        <div id="symbol" class="symbol circle"></div>
     </div>
+
 </div>
 
-<div id="result" class="hidden resultCard">
-    <h2 id="resultTitle">Bra jobbat!</h2>
-    <div class="scoreCircle" id="scoreCircle">
-        <span id="finalScore"></span>
-    </div>
-    <p id="highScore"></p>
-    <p id="performanceText"></p>
+<div id="result" class="hidden result">
+    <h2 id="resultTitle">Bra jobbat</h2>
+    <div class="scoreDisplay" id="finalScore"></div>
+    <div id="highScore"></div>
+    <div id="feedback"></div>
     <button id="restartBtn" class="primary">Spela igen</button>
 </div>
 
-</div>
-
 <script src="game.js"></script>
+
 <script>
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('service-worker.js');
