--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NeuroSprint</title>
+<title>HjärnMatch</title>
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#2E7D32">
 <link rel="stylesheet" href="style.css">
@@ -11,49 +11,34 @@
 <body>
 
 <div id="menu" class="menu">
-
-    <h1>NeuroSprint</h1>
+    <h1>HjärnMatch</h1>
     <p class="subtitle">Matcha symbolen med rätt sida</p>
 
-    <div class="illustration">
-        <div class="example-screen">
-            <div class="half left"></div>
-            <div class="half right"></div>
-            <div class="example-symbol circle"></div>
-        </div>
-        <div class="example-text">
-            <span class="shape circle"></span> Tryck vänster<br>
-            <span class="shape square"></span> Tryck höger
-        </div>
-    </div>
-
-    <label class="toggle">
-        <input type="checkbox" id="gentleToggle">
-        Gentle Mode (ingen minuspoäng)
-    </label>
-
+    <button id="installBtn" class="secondary hidden">📱 Installera appen</button>
     <button id="startBtn" class="primary">Starta</button>
 </div>
 
 <div id="game" class="hidden">
-
     <div class="topbar">
-        <div id="timer">Tid: 60</div>
         <div id="score">Poäng: 0</div>
     </div>
 
     <div class="playArea">
         <div id="leftZone" class="zone left"></div>
         <div id="rightZone" class="zone right"></div>
-        <div id="symbol" class="symbol circle"></div>
-    </div>
 
+        <div class="ring">
+            <div id="progressRing" class="progress"></div>
+            <div id="symbol" class="symbol circle"></div>
+        </div>
+    </div>
 </div>
 
 <div id="result" class="hidden result">
-    <h2>Bra jobbat</h2>
+    <h2>Resultat</h2>
     <div class="scoreDisplay" id="finalScore"></div>
-    <div id="highScore"></div>
+    <div id="reaction"></div>
+    <div id="bestReaction"></div>
     <button id="restartBtn" class="primary">Spela igen</button>
 </div>
 
