--- a/index.html
+++ b/index.html
@@ -4,58 +4,49 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HjärnMatch</title>
-<link rel="manifest" href="manifest.json">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-<meta name="theme-color" content="#6B8E7A">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="menu" class="menu">
-    <h1>HjärnMatch</h1>
-    <p class="subtitle">Enkel träning för fokus och reaktion</p>
+<div id="startScreen" class="screen active">
+<h1>HjärnMatch</h1>
+<p class="subtitle">20 snabba beslut. Ca 1 minut.</p>
 
-    <div class="hero">
-        <div class="heroShape left">●</div>
-        <div class="heroShape right">■</div>
-    </div>
-
-    <button id="startBtn" class="primary">Starta</button>
-    <button id="installBtn" class="secondary hidden">Installera appen</button>
+<div class="hero">
+<div class="hero-left">●</div>
+<div class="hero-arrow">↔</div>
+<div class="hero-right">■</div>
 </div>
 
-<div id="game" class="hidden">
-    <div class="scoreBlock">
-        <div class="scoreLabel">POÄNG</div>
-        <div id="score" class="scoreValue">0</div>
-    </div>
-
-    <div class="playArea">
-        <div id="leftZone" class="zone">
-            <div class="corner">●</div>
-        </div>
-        <div id="rightZone" class="zone">
-            <div class="corner">■</div>
-        </div>
-
-        <div id="symbol" class="symbol">●</div>
-    </div>
+<button class="primary" onclick="startGame()">Starta</button>
 </div>
 
-<div id="result" class="hidden result">
-    <h2>Resultat</h2>
-    <div id="finalScore" class="scoreValue"></div>
-    <div id="reaction"></div>
-    <div id="bestReaction"></div>
-    <button id="restartBtn" class="primary">Spela igen</button>
+<div id="gameScreen" class="screen">
+<div class="progress-container">
+<div id="progressBar" class="progress-bar"></div>
+</div>
+
+<div class="score">Poäng: <span id="score">0</span></div>
+
+<div class="game-area">
+<div id="symbol" class="symbol">●</div>
+</div>
+
+<div class="controls">
+<button class="side left" onclick="choose('left')">●</button>
+<button class="side right" onclick="choose('right')">■</button>
+</div>
+</div>
+
+<div id="endScreen" class="screen">
+<h2>Resultat</h2>
+<h1 id="finalScore">0</h1>
+<p id="encouragement"></p>
+<p id="reactionTime"></p>
+<p id="bestTime"></p>
+<button class="primary" onclick="startGame()">Spela igen</button>
 </div>
 
 <script src="game.js"></script>
-<script>
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js');
-}
-</script>
-
 </body>
 </html>
