--- a/index.html
+++ b/index.html
@@ -8,43 +8,42 @@
 </head>
 <body>
 
-<div id="startScreen" class="screen active">
-<h1>HjärnMatch</h1>
-<p class="subtitle">20 snabba beslut. Ca 1 minut.</p>
-
-<div class="hero">
-<div class="hero-left">●</div>
-<div class="hero-arrow">↔</div>
-<div class="hero-right">■</div>
-</div>
-
-<button class="primary" onclick="startGame()">Starta</button>
+<div id="startScreen" class="screen active center">
+  <h1>HjärnMatch</h1>
+  <p class="subtitle">20 snabba beslut. Under en minut.</p>
+  <button class="primary" onclick="startGame()">Starta</button>
 </div>
 
 <div id="gameScreen" class="screen">
-<div class="progress-container">
-<div id="progressBar" class="progress-bar"></div>
+  <div class="topbar">
+    <div class="round" id="roundText">Runda 1 av 20</div>
+    <div class="score">Poäng: <span id="score">0</span></div>
+  </div>
+  <div class="progress-container">
+    <div id="progressBar" class="progress-bar"></div>
+  </div>
+
+  <div class="game-area">
+    <div id="symbol" class="symbol">●</div>
+  </div>
+
+  <div class="halves">
+    <div class="half left" onclick="choose('left')">
+      <div class="bg-icon">●</div>
+    </div>
+    <div class="half right" onclick="choose('right')">
+      <div class="bg-icon">■</div>
+    </div>
+  </div>
 </div>
 
-<div class="score">Poäng: <span id="score">0</span></div>
-
-<div class="game-area">
-<div id="symbol" class="symbol">●</div>
-</div>
-
-<div class="controls">
-<button class="side left" onclick="choose('left')">●</button>
-<button class="side right" onclick="choose('right')">■</button>
-</div>
-</div>
-
-<div id="endScreen" class="screen">
-<h2>Resultat</h2>
-<h1 id="finalScore">0</h1>
-<p id="encouragement"></p>
-<p id="reactionTime"></p>
-<p id="bestTime"></p>
-<button class="primary" onclick="startGame()">Spela igen</button>
+<div id="endScreen" class="screen center">
+  <h2>Resultat</h2>
+  <h1 id="finalScore"></h1>
+  <p id="encouragement"></p>
+  <p id="reactionTime"></p>
+  <p id="bestTime"></p>
+  <button class="primary" onclick="startGame()">Spela igen</button>
 </div>
 
 <script src="game.js"></script>
