--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   </div>
 
   <div class="game-area">
-    <div id="symbol" class="symbol">●</div>
+    <div id="symbol" class="symbol"></div>
   </div>
 
   <div class="halves">
-    <div class="half left" onclick="choose('left')">
+    <div id="leftHalf" class="half left" onclick="choose('left')">
       <div class="bg-icon">●</div>
     </div>
-    <div class="half right" onclick="choose('right')">
+    <div id="rightHalf" class="half right" onclick="choose('right')">
       <div class="bg-icon">■</div>
     </div>
   </div>
