--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
 
 <div id="startScreen" class="screen active">
-  <div class="center">
+  <div class="card center">
     <h1>HjärnMatch</h1>
-    <p class="subtitle">20 snabba beslut. Under en minut.</p>
+    <p class="subtitle">1 minut fokusträning. När som helst.</p>
+    <div class="preview">
+      <div class="mini left-mini">●</div>
+      <div class="mini right-mini">■</div>
+    </div>
     <button class="primary" onclick="startGame()">Starta</button>
   </div>
 </div>
@@ -19,7 +23,7 @@
 <div id="gameScreen" class="screen">
   <div class="topbar">
     <div id="roundText">Runda 1 av 20</div>
-    <div>Poäng: <span id="score">0</span></div>
+    <div class="score">Poäng <span id="score">0</span></div>
   </div>
 
   <div class="progress-container">
@@ -41,12 +45,12 @@
 </div>
 
 <div id="endScreen" class="screen">
-  <div class="center">
-    <h2>Resultat</h2>
+  <div class="card center result-card">
+    <h2 id="resultTitle"></h2>
     <h1 id="finalScore"></h1>
-    <p id="encouragement"></p>
     <p id="reactionTime"></p>
     <p id="bestTime"></p>
+    <p id="encouragement"></p>
     <button class="primary" onclick="startGame()">Spela igen</button>
   </div>
 </div>
