--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>HjärnMatch</title>
 
-<link rel="manifest" href="/NeuroSprint/manifest.json?v=19">
-<link rel="apple-touch-icon" href="/NeuroSprint/apple-touch-icon.png?v=19">
+<link rel="manifest" href="/NeuroSprint/manifest.json?v=20">
 <meta name="theme-color" content="#2F5D50">
 
 <link rel="stylesheet" href="style.css">
@@ -17,14 +16,7 @@
   <div class="card center">
     <h1>HjärnMatch</h1>
     <p class="subtitle">1 minut fokusträning</p>
-
-    <div class="hero">
-        <div class="hero-circle">●</div>
-        <div class="hero-square">■</div>
-    </div>
-
     <button id="startBtn" class="primary full">Starta</button>
-    <button class="secondary full">Installera som app</button>
   </div>
 </div>
 
@@ -56,6 +48,8 @@
   <div class="card center result-card">
     <h2 id="resultTitle"></h2>
     <h1 id="finalScore"></h1>
+    <p id="averageTime"></p>
+    <p id="bestTime"></p>
     <button id="restartBtn" class="primary full">Spela igen</button>
   </div>
 </div>
